--- a/style.css
+++ b/style.css
@@ -214,6 +214,80 @@
   color: #555;
 }
 
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-top: 1px solid #ddd;
+  line-height: 2.5; 
+}
+.footer .logo-section {
+  max-width: 300px;
+}
+.footer .logo-section p {
+  font-size: 14px;
+  color: #555;
+  margin: 10px 0;
+  line-height: 2;
+}
+.footer .logo-section button {
+  padding: 10px 20px;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+.footer .quick-links, .footer .recent-posts {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.footer .quick-links li, .footer .recent-posts li {
+  margin-bottom: 10px;
+}
+
+/* For quick links */
+.quick-links li {
+  line-height: 1.5; /* Added line height for list items */
+}
+
+.footer .quick-links a, .footer {
+  text-decoration: none;
+  color: #000;
+  font-size: 14px;
+}
+
+.recent-posts a {
+  text-decoration: none;
+  color: #e7e4e4;
+  font-size: 14px;
+}
+
+.recent-posts li {
+  background-color: #302e2e;
+  color: #fff;
+  padding: 10px;
+  font-size: 14px;
+  border-radius: 10px;
+} 
+
+.recent-posts li a:hover {
+  color: #fff;
+  transform: translateY(-5px);
+}
+
+.footer-bottom {
+  text-align: center;
+  padding: 10px;
+  font-size: 12px;
+  color: #555;
+}
+.footer-bottom span {
+  color: red;
+}
+
 /* Work in Progress Styles */
 .wip-container {
   min-height: 60vh;
